# rokis-portfolio

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.ci.yaml  docker-compose.dev.yaml  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  example.env  manage.py  postgresql.conf  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  deploy.dev.yml  deploy.prod.yml  deploy.yml  release.yml
apps/common/: context_processors.py  models.py  utils.py  validators.py
apps/common/tests/: __init__.py  abstract_model_test_case.py  flash_messages_mixin.py  test_base_model.py  test_load_fixtures.py  test_max_file_size_validator.py  utils.py
apps/portfolio/: service.py  services.py  urls.py  views.py
apps/portfolio/admin/: __init__.py  education_inline.py  employment_inline.py  internship_inline.py  language_inline.py  link_inline.py  portfolio_admin.py  project_inline.py  skill_inline.py
apps/portfolio/fixtures/: education.yaml  employment.yaml  internship.yaml  language.yaml  link.yaml  portfolio.yaml  project.yaml  skill.yaml
apps/portfolio/migrations/: 0001_initial.py  0002_alter_portfolio_avatar.py  0002_initial.py  0003_alter_portfolio_about_me_alter_portfolio_avatar.py  0004_portfolio_user.py
apps/portfolio/models/: __init__.py  base_model.py  education.py  employment.py  internship.py  language.py  link.py  (+6 more)
apps/user/: forms.py  service.py  urls.py  views.py
common/tests/: test_max_file_size_validator.py
cv/: services.py  sevices.py  urls.py  views.py
cv/admin/: __init__.py  cv_admin.py  education_inline.py  employment_inline.py  internship_inline.py  language_inline.py  link_inline.py  project_inline.py  skill_inline.py
cv/fixtures/: cv.yaml  education.yaml  employment.yaml  internship.yaml  language.yaml  link.yaml  project.yaml  skill.yaml  user.yaml
cv/migrations/: 0001_initial.py  0002_alter_link_type.py  0002_alter_skill_options_language.py  0002_employment.py  0003_alter_employment_options_alter_employment_cv_and_more.py  0003_cv_is_published_alter_cv_avatar.py  0003_link.py  0004_education.py  0005_alter_education_cv_project.py  0006_cv_page_count_alter_cv_about_me.py
cv/models/: __init__.py  base_model.py  cv.py  education.py  employment.py  internship.py  language.py  left_cv_column_mixin.py  link.py  position.py  project.py  right_cv_column_mixin.py  skill.py
monitoring/: prometheus.yml
portfolizer/: asgi.py  urls.py  utils.py  views.py  wsgi.py
portfolizer/settings/: common.py  main.py
portfolizer/tests/: test_index_view.py  test_init_sentry_sdk.py
rokis_corner/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
rokis_corner/settings/: common.py  main.py  sentry.py
rokis_corner/tests/: test_index_view.py  test_init_sentry_sdk.py
rokis_portfolio/: asgi.py  urls.py  views.py  wsgi.py
rokis_portfolio/settings/: common.py  main.py
rokis_portfolio/tests/: test_index_view.py  test_init_sentry_sdk.py
scripts/: deploy  deploy.dev  entrypoint  pre-commit
static/: manifest.json
static/css/: base.css  common.css  form.css  index.css
static/js/: flash-messages.js
templates/: base.html  index.html
templates/admin/: base.html  base_site.html  index.html
templates/includes/: icons.html  input_field.html
(+85 files in other folders)
