[tool.poetry]
name = "rokis-corner"
version = "1.0.1"
description = ""
authors = ["Miloš Roknić <roknic.milos.994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-extensions = "^3.2.3"
django-pdf-view = "^2.1.0"
gunicorn = "^23.0.0"
pillow = "^10.4.0"
python-decouple = "^3.8"
sentry-sdk = { extras = ["django"], version = "^2.15.0" }
django-health-check = "^3.18.3"
django-analytical = "^3.1.0"
django-smart-fixtures = "^2.0.1"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.1"

[tool.poetry.group.local.dependencies]
ruff = "^0.6.8"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
preview = true
lint.select = [
    "E501", # enforce line length
    "Q000", # enforce double quotes
]
exclude = [
    "**/migrations/*",
]
